# music_party_web_app

./: LICENSE  README.md  db.sqlite3  pyproject.toml
