[tool.poetry]
name = "tutorial 17"
version = "0.1.0"
description = ""
authors = ["Juan <ramirezjordajuan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.3"
djangorestframework = "^3.14.0"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
